[gd_scene load_steps=2 format=3 uid="uid://startmenu001"]

[ext_resource type="Script" path="res://ui/start_menu.gd" id="1_start"]

[node name="StartMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_start")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Endless"
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="StressTestRow" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Panel/MarginContainer/VBox/StressTestRow"]
layout_mode = 2
text = "Stress Test Mode"

[node name="TotalLabel" type="Label" parent="Panel/MarginContainer/VBox/StressTestRow"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="WorldSizeRow" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/WorldSizeRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "World Size"

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/VBox/WorldSizeRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Panel/MarginContainer/VBox/WorldSizeRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="TownsRow" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/TownsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Towns"

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/VBox/TownsRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Panel/MarginContainer/VBox/TownsRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="FarmersRow" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/FarmersRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Farmers"

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/VBox/FarmersRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Panel/MarginContainer/VBox/FarmersRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="GuardsRow" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/GuardsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Guards"

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/VBox/GuardsRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Panel/MarginContainer/VBox/GuardsRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="RaidersRow" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/RaidersRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Raiders"

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/VBox/RaidersRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Panel/MarginContainer/VBox/RaidersRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Start Game"
